<resources>
    <string name="app_name">Clubo</string>
    <string-array name="liga_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string-array name="liga_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string name="badge">Badge</string>
    <string name="formed">Formed</string>
    <string name="formed_year">1992</string>
    <string name="country">Country</string>
    <string name="country_text">England</string>
    <string name="desc">Desc</string>
    <string name="desc_example">The Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League (EFL).r r The Premier League is a corporation in which the member clubs act as shareholders. Seasons run from August to May with each team playing 38 matches (playing each other home and away). Most games are played on Saturday and Sunday afternoons. The Premier League has featured 47 English and two Welsh clubs since its inception, making it a cross-border league.r r The competition was formed as the FA Premier League on 20 February 1992 following the decision of clubs in the Football League First Division to break away from the Football League, founded in 1888, and take advantage of a lucrative television rights deal.</string>
</resources>