<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_height="300dp"
                android:layout_width="match_parent"
                android:paddingTop="?actionBarSize"
                android:paddingBottom="?actionBarSize"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/image_league"
                    android:layout_width="200dp"
                    android:paddingTop="16dp"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:contentDescription="@string/badge"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formed" />

                    <TextView
                        android:id="@+id/tv_formed"
                        style="@style/CardView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/formed_year" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/tv_country"
                        style="@style/CardView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/country_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc" />

                    <TextView
                        android:id="@+id/tv_desc"
                        style="@style/CardView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="3"
                        android:text="@string/desc_example" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="bottom"
                app:menu="@menu/list_menu"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|snap|enterAlways"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.viewpager.widget.ViewPager>

    <FrameLayout
        android:id="@+id/loading_overlay"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CD000000"
            android:clickable="true"
            android:focusable="true" />

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:max="100"
            android:progress="0" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>