<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:padding="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_badge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/team"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:padding="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            card_view:layout_constraintStart_toEndOf="@+id/iv_badge"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="5"
            android:maxLines="5"
            android:text="@string/desc_example"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tv_country"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_country" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>